--- a/src/main/resources/templates/motorista-lista.html
+++ b/src/main/resources/templates/motorista-lista.html
@@ -45,7 +45,8 @@
 								<a class="btn btn-primary btn-sm"
 									th:href="@{motoristas/editar/{id}(id=${motorista.id})}">Editar</a>
 								<a class="btn btn-danger btn-sm"
-									th:href="@{motoristas/excluir/{id}(id=${motorista.id})}">Excluir</a>
+									th:href="@{motoristas/excluir/{id}(id=${motorista.id})}"
+									onclick="return confirm('Confirma a exclusão ?')">Excluir</a>
 							</td>
 						</tr>
 					</tbody>
