--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layoutBase}">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Home</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
 </head>
 
-<body class="d-flex flex-column h-100 w-100 text-center">
-
-	<header>
-		<div th:replace="fragments/header :: header" class="mt-auto"/>
-	</header>
-
-	<div class="cover-container mt-auto mx-auto col-md-5">
-		<main role="main" class="inner cover">
-			<h1 class="cover-heading">CarRental</h1>
-			<p class="lead">CarRental é um projeto desenvolvido para a Pós-Graduação da faculdade DELTA, 
-				que tem por objetivo fixar o conhecimento aprendido no módulo de SpringMVC</p>
-		</main>
-	</div>
-	<div class="footer mt-auto py-3" align="center">
-		<div class="container" th:replace="fragments/footer :: footer" />
-	</div>
+<body>
+	<section layout:fragment="conteudo" class="text-center">
+		<div class="cover-container mt-4 mx-auto col-md-5">
+			<main role="main" class="inner cover">
+				<h1 class="cover-heading">CarRental</h1>
+				<p class="lead">CarRental é um projeto desenvolvido para a Pós-Graduação da faculdade DELTA,
+					que tem por objetivo fixar o conhecimento aprendido no módulo de SpringMVC</p>
+			</main>
+		</div>
+	</section>
 </body>
 
 </html>
