--- a/src/main/resources/templates/locacao-lista.html
+++ b/src/main/resources/templates/locacao-lista.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layoutBase}">
 
 <head>
-	<meta charset="UTF-8">
 	<title>Cadastro de Locações</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
-
-	<header>
-		<div th:replace="fragments/header :: header" class="mt-auto" />
-	</header>
-
-	<main>
+	<section layout:fragment="conteudo">
 		<div class="container">
 			<div class="center" align="center">
 				<h1 class="display-4">Lista de Locações</h1>
@@ -50,13 +42,13 @@
 								onclick="return confirm('Confirma a exclusão ?')">Excluir</a>
 							</td>
 						</tr>
+						<tr th:if="${#lists.isEmpty(locacoes)}">
+						    <td colspan="8" align="center">Nenhuma locacao cadastrada!</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
-	</main>
-	<div class="footer mt-auto py-3" align="center">
-		<div class="container" th:replace="fragments/footer :: footer" />
-	</div>
+	</section>
 </body>
 </html>
