--- a/src/main/resources/templates/carro-cadastro.html
+++ b/src/main/resources/templates/carro-cadastro.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layoutBase}">
 <head>
-<meta charset="UTF-8">
 <title>Cadastro de Carros</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
-
-	<div>
-		<div th:replace="fragments/header :: header" class="mt-auto"/>
-	</div>
-
-	<main>
+	<section layout:fragment="conteudo">
 		<div class="container">
 			<h1 class="display-4" align="center">Cadastro de Carros</h1>
 			
 			<div>
 				<form action="/carros" method="POST" th:object="${carro}">
 	
-					<div th:replace="fragments/alert-error :: div" />
+					<div th:replace="alert-error :: div" />
 	
-					<div th:replace="fragments/alert-sucsses :: div" />
+					<div th:replace="alert-sucsses :: div" />
 	
 					<input type="hidden" th:field="*{id}" />
 					<div class="form-group">
@@ -44,15 +36,10 @@
 								th:text="${modelo.descricao}" th:value="${modelo.id}"></option>
 						</select>
 					</div>
-	
-	
 					<button type="submit" class="btn btn-primary">Salvar</button>
 				</form>
 			</div>
 		</div>
-	</main>
-	<div class="footer mt-auto py-3" align="center">
-		<div class="container" th:replace="fragments/footer :: footer" />
-	</div>
+	</section>
 </body>
 </html>
