--- a/src/main/resources/templates/locacao-cadastro.html
+++ b/src/main/resources/templates/locacao-cadastro.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layoutBase}">
 
 <head>
-    <meta charset="UTF-8">
     <title>Cadastro de Locações</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
 
-    <div th:replace="fragments/header :: header" />
-
-    <div class="container">
+    <section layout:fragment="conteudo">
         <h1 class="display-4" align="center">Cadastro de Locações</h1>
 
         <div>
             <form action="/locacoes" method="POST" th:object="${locacao}">
 
-                <div th:replace="fragments/alert-error :: div" />
+                <div th:replace="alert-error :: div" />
 
-                <div th:replace="fragments/alert-sucsses :: div" />
+                <div th:replace="alert-sucsses :: div" />
 
                 <input type="hidden" th:field="*{id}" />
                 <div class="form-group">
@@ -58,10 +53,7 @@
                 <button type="submit" class="btn btn-primary">Salvar</button>
             </form>
         </div>
-    </div>
-    <div class="footer mt-auto py-3" align="center">
-        <div class="container" th:replace="fragments/footer :: footer" />
-    </div>
+    </section>
 </body>
 
 </html>
