--- a/src/main/resources/templates/motorista-cadastro.html
+++ b/src/main/resources/templates/motorista-cadastro.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layoutBase}">
 
 <head>
-	<meta charset="UTF-8">
 	<title>Cadastro de Motoristas</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
-<body class="d-flex flex-column h-100">
-
-	<header>
-		<div th:replace="fragments/header :: header" />
-	</header>
-
-	<main>
+<body>
+	<section layout:fragment="conteudo">
 		<div class="container">
 			<h1 class="display-4" align="center">Cadastro de Motoristas</h1>
 			<div>
 				<form action="/motoristas" method="POST" th:object="${motorista}">
-					<div th:replace="fragments/alert-error :: div" />
-					<div th:replace="fragments/alert-sucsses :: div" />
+					<div th:replace="alert-error :: div" />
+					<div th:replace="alert-sucsses :: div" />
 					<input type="hidden" th:field="*{id}" />
 					<div class="form-group">
 						<label for="nome">Nome:</label>
 						<input id="nome" type="text" th:field="*{nome}" class="form-control form-control-sm" />
 						<label for="cpf">CPF:</label>
-						<input id="cpf" type="number" th:field="*{cpf}" class="form-control form-control-sm" 
+						<input id="cpf" type="text" th:field="*{cpf}" class="form-control form-control-sm" 
 								maxlength="11" minlength="11"/>
 						<label for="cnh">CNH:</label>
 						<input id="cnh" type="text" th:field="*{cnh}" class="form-control form-control-sm" />
@@ -42,10 +34,7 @@
 				</form>
 			</div>
 		</div>
-	</main>
-	<div class="footer mt-auto py-3" align="center">
-		<div class="container" th:replace="fragments/footer :: footer" />
-	</div>
+	</section>
 </body>
 
 </html>
