--- a/src/main/resources/templates/layoutBase.html
+++ b/src/main/resources/templates/layoutBase.html
@@ -12,10 +12,12 @@
     <header th:replace="cabecalho" class="fixed-top">
         
     </header>
-    <section layout:fragment="conteudo" class="container mt-4 mb-2">
-        <!-- corpo / conteudo -->
-    </section>
-    <footer class="bg-light text-center p-1 fixed-bottom">
+    <main>
+        <section layout:fragment="conteudo" class="container mt-4 pb-4 mb-2">
+            <!-- corpo / conteudo -->
+        </section>
+    </main>
+    <footer class="footer bg-light mt-auto py-1 text-center fixed-bottom">
         @2019 DevEderNo.
     </footer>
 
