add styles and modified layout and html

--- a/src/main/resources/templates/carro-cadastro.html
+++ b/src/main/resources/templates/carro-cadastro.html
@@ -9,7 +9,7 @@
 <body class="d-flex flex-column h-100">
 	<section layout:fragment="conteudo">
 		<div class="container">
-			<h1 class="display-4" align="center">Cadastro de Carros</h1>
+			<h1>Cadastro de Carros</h1>
 			
 			<div>
 				<form action="/carros" method="POST" th:object="${carro}">
