--- a/src/main/resources/templates/locacao-cadastro.html
+++ b/src/main/resources/templates/locacao-cadastro.html
@@ -10,7 +10,7 @@
 <body class="d-flex flex-column h-100">
 
     <section layout:fragment="conteudo">
-        <h1 class="display-4" align="center">Cadastro de Locações</h1>
+        <h1>Cadastro de Locações</h1>
 
         <div>
             <form action="/locacoes" method="POST" th:object="${locacao}">
