--- a/src/main/resources/templates/modelo-cadastro.html
+++ b/src/main/resources/templates/modelo-cadastro.html
@@ -11,7 +11,7 @@
 
 	<section layout:fragment="conteudo">
 		<div class="container">
-			<h1 class="display-4" align="center">Cadastro de Modelos</h1>
+			<h1>Cadastro de Modelos</h1>
 	
 			<div>
 				<form action="/modelos" method="POST" th:object="${modelo}">
