--- a/src/main/resources/templates/carro-lista.html
+++ b/src/main/resources/templates/carro-lista.html
@@ -9,8 +9,8 @@
 <body>
     <section layout:fragment="conteudo">
         <div class="container">
-            <div class="center" align="center">
-                <h1 class="display-4">Lista de Carros</h1>
+            <div>
+                <h1>Carros</h1>
             </div>
         
             <div>
