--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 	<section layout:fragment="conteudo" class="text-center">
 		<div class="cover-container mt-4 mx-auto col-md-5">
 			<main role="main" class="inner cover">
-				<h1 class="cover-heading">CarRental</h1>
+				<h1>CarRental</h1>
 				<p class="lead">CarRental é um projeto desenvolvido para a Pós-Graduação da faculdade DELTA,
 					que tem por objetivo fixar o conhecimento aprendido no módulo de SpringMVC</p>
 			</main>
