--- a/src/main/resources/templates/locacao-lista.html
+++ b/src/main/resources/templates/locacao-lista.html
@@ -10,8 +10,8 @@
 <body class="d-flex flex-column h-100">
 	<section layout:fragment="conteudo">
 		<div class="container">
-			<div class="center" align="center">
-				<h1 class="display-4">Lista de Locações</h1>
+			<div>
+				<h1>Locações</h1>
 			</div>
 
 			<div>
