--- a/src/main/resources/templates/modelo-lista.html
+++ b/src/main/resources/templates/modelo-lista.html
@@ -10,8 +10,8 @@
 <body>
 	<section layout:fragment="conteudo">
 		<div class="container">
-			<div class="center" align="center">
-				<h1 class="display-4">Lista de Modelos</h1>
+			<div>
+				<h1>Modelos</h1>
 			</div>
 	
 			<div>
